--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:5000/eureka
+instance.hostname=localhost
